k8s-do/copyright-tool/copyright-tool-ingress.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyright-tool
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.regeljerechten.nl
        - regeljerechten.nl
      secretName: www-regeljerechten-tls
  rules:
    - host: www.regeljerechten.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: copyright-tool
                port:
                  number: 80
